<resources>
    <string name="app_name">Order Pager</string>
    <string name="action_settings">Settings</string>

    <!--Intro-->
    <string name="intro_welcome_slide_title">Welcome to Umami Shop Order Pager!</string>
    <string name="intro_welcome_slide_description">Let\'s start with a bit of setup</string>

    <string name="intro_login_slide_title">Time to sign in!</string>

    <string name="intro_login_confirmation_slide_title">You are signed in!</string>
    <string name="intro_login_confirmation_slide_description">Let\'s verify a few more things.</string>

    <string name="intro_location_slide_title">Please select the location for this device.</string>

    <string name="intro_complete_slide_title">All done!</string>
    <string name="intro_complete_slide_description">You can now start using the app!</string>

    <!--Create-->
    <string name="create_name">Create Ticket</string>

    <string name="create_ticket">Ticket</string>
    <string name="create_submit">Submit</string>

    <!--Dialogs-->
    <string name="dialog_new_location_title">New location</string>
    <string name="dialog_new_location_description">Please enter the name of this location.</string>

    <!--EditText Hints-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_new_location">Location Name</string>

    <!--Errors-->
    <string name="error_email_empty">Please enter an email address</string>
    <string name="error_email_invalid">Please enter a valid email address</string>
    <string name="error_password_empty">Please enter a password</string>

    <!--Numpad-->
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>

    <!--Chromecast-->
    <string name="app_id">225900B3</string>
    <string name="media_route_menu_title">Chromecast</string>
    <string name="namespace">urn:x-cast:com.poplitou.cast.orderpager</string>

    <!--Dialog-->
    <string name="dialog_delete_title">Delete order</string>
    <string name="dialog_delete_description">Are you sure you want to delete this order?</string>

</resources>
