<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:clipToPadding="false"
    android:gravity="center"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/fragment_slide_login_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/baseline"
        android:layout_marginBottom="@dimen/baseline"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:fontFamily="sans-serif-medium"
        android:text="@string/intro_login_slide_title" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/fragment_slide_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/baseline"
        android:layout_marginBottom="@dimen/baseline"
        android:layout_marginLeft="@dimen/baseline"
        android:layout_marginRight="@dimen/baseline"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"

        app:met_baseColor="@android:color/white"
        app:met_primaryColor="@android:color/white"
        app:met_iconLeft="@drawable/ic_email" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/fragment_slide_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/baseline"
        android:layout_marginBottom="@dimen/baseline"
        android:layout_marginLeft="@dimen/baseline"
        android:layout_marginRight="@dimen/baseline"
        android:inputType="textPassword"
        android:hint="@string/hint_password"

        app:met_baseColor="@android:color/white"
        app:met_primaryColor="@android:color/white"
        app:met_iconLeft="@drawable/ic_lock" />

</LinearLayout>